--- a/prod/deployment.yaml
+++ b/prod/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: production-container
-        image: us-west1-docker.pkg.dev/$PROJECT_ID/my-repository/hello-cloudbuild:v1.0
+        image: us-west1-docker.pkg.dev/qwiklabs-gcp-03-fdba4fb240fd/my-repository/hello-cloudbuild:v1.0
         ports:
         - containerPort: 8080
